--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -55,13 +55,14 @@
 
         <EditText
             android:id="@+id/editTextTextMultiLine"
-            android:layout_width="381dp"
-            android:layout_height="439dp"
+            android:layout_width="369dp"
+            android:layout_height="254dp"
             android:layout_marginTop="16dp"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
             android:text="@string/gamepad_config"
+            android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_pointer" />
 
@@ -69,10 +70,24 @@
             android:id="@+id/textView2"
             android:layout_width="372dp"
             android:layout_height="79dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="256dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+
+        <TextView
+            android:id="@+id/commandHistory"
+            android:layout_width="369dp"
+            android:layout_height="257dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="4dp"
+            android:scrollbars="vertical"
+            android:text="waiting input...\n"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
