--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:padding="16dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -144,6 +144,19 @@
             android:layout_height="36dp"
             android:layout_marginBottom="25dp"
             android:text="UI"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/timer_view"
+            android:layout_width="49dp"
+            android:layout_height="46dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="90dp"
+            android:text="00:00"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
